Spacing fix for etailed advertisement

--- a/public/css/bootstrap/bootstrap-responsive.css
+++ b/public/css/bootstrap/bootstrap-responsive.css
@@ -153,6 +153,7 @@
   }
   .span6 {
     width: 570px;
+      margin-top: 22px;
   }
   .span5 {
     width: 470px;
